First push to my fork

--- a/match_up_estimate.ipynb
+++ b/match_up_estimate.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from espn_api.basketball import League, Matchup, Team"
+    "from espn_api.basketball import League, Matchup, Team\n",
+    "from activity.myUtil import get_opponent_team, get_my_team\n",
+    "from espn_api.basketball.week import Week\n",
+    "from espn_api.basketball.roster_week_predictor import RosterWeekPredictor\n",
+    "\n",
+    "from IPython.display import HTML, display\n",
+    "import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,47 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021/players\n",
-      "OUT\n",
-      "OUT\n",
-      "OUT\n",
-      "DAY_TO_DAY\n",
-      "OUT\n",
-      "OUT\n",
-      "OUT\n",
-      "OUT\n",
-      "DAY_TO_DAY\n",
-      "OUT\n",
-      "OUT\n",
-      "DAY_TO_DAY\n",
-      "OUT\n",
-      "DAY_TO_DAY\n",
-      "OUT\n",
-      "DAY_TO_DAY\n",
-      "DAY_TO_DAY\n"
-     ]
-    }
-   ],
-   "source": [
-    "league = League(league_id=30695, year=2021, espn_s2=espn_s2, swid=swid)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MY_TEAM_ID = 2\n",
-    "schedule = league.get_team_data(MY_TEAM_ID).schedule"
+    "league = League(league_id=30695, year=2021, espn_s2=espn_s2, swid=swid)"
    ]
   },
   {
@@ -71,59 +41,42 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "<tr><td>Team Name          </td><td>Team Id</td></tr>\n",
+       "<tr><td>CZ ButtKicker      </td><td>1      </td></tr>\n",
+       "<tr><td>SEA MoNeYPro       </td><td>2      </td></tr>\n",
+       "<tr><td>NY Zhanos Diesel   </td><td>4      </td></tr>\n",
+       "<tr><td>Shanghai SHARKS    </td><td>5      </td></tr>\n",
+       "<tr><td>Team Tao           </td><td>7      </td></tr>\n",
+       "<tr><td>Team Beyond        </td><td>9      </td></tr>\n",
+       "<tr><td>PHI Lower Merion 33</td><td>11     </td></tr>\n",
+       "<tr><td>Badwomen ``        </td><td>14     </td></tr>\n",
+       "<tr><td>Dragon City Tiedan </td><td>15     </td></tr>\n",
+       "<tr><td>Tim Liang          </td><td>16     </td></tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "[Activity((Team(CZ ButtKicker),FA ADDED,Lauri Markkanen)),\n",
-       " Activity((Team(CZ ButtKicker),DROPPED,Delon Wright) (Team(CZ ButtKicker),FA ADDED,Montrezl Harrell) (Team(CZ ButtKicker),DROPPED,Lauri Markkanen)),\n",
-       " Activity((Team(Tim Liang),FA ADDED,Otto Porter Jr.) (Team(Tim Liang),DROPPED,Tim Hardaway Jr.)),\n",
-       " Activity((Team(PHI Lower Merion 33),DROPPED,Bobby Portis) (Team(PHI Lower Merion 33),FA ADDED,Nicolas Batum)),\n",
-       " Activity((Team(SEA MoNeYPro),FA ADDED,Enes Kanter) (Team(SEA MoNeYPro),DROPPED,Saddiq Bey)),\n",
-       " Activity((Team(SEA MoNeYPro),FA ADDED,Saddiq Bey)),\n",
-       " Activity((Team(Tim Liang),DROPPED,Kevin Love) (Team(Tim Liang),FA ADDED,Kelly Olynyk)),\n",
-       " Activity((Team(PHI Lower Merion 33),FA ADDED,Bobby Portis)),\n",
-       " Activity((Team(PHI Lower Merion 33),DROPPED,Naz Reid)),\n",
-       " Activity((Team(Dragon City Tiedan ),DROPPED,Spencer Dinwiddie) (Team(Dragon City Tiedan ),WAIVER ADDED,RJ Barrett)),\n",
-       " Activity((Team(CZ ButtKicker),DROPPED,Marvin Bagley III) (Team(CZ ButtKicker),FA ADDED,Bismack Biyombo)),\n",
-       " Activity((Team(CZ ButtKicker),FA ADDED,Eric Gordon) (Team(CZ ButtKicker),DROPPED,Lou Williams)),\n",
-       " Activity((Team(Team Beyond),DROPPED,Jae Crowder) (Team(Team Beyond),FA ADDED,Patty Mills)),\n",
-       " Activity((Team(Team Beyond),DROPPED,Cameron Payne) (Team(Team Beyond),FA ADDED,Malik Beasley)),\n",
-       " Activity((Team(Shanghai SHARKS),DROPPED,De'Anthony Melton) (Team(Shanghai SHARKS),FA ADDED,Elfrid Payton)),\n",
-       " Activity((Team(SEA MoNeYPro),DROPPED,Josh Jackson) (Team(SEA MoNeYPro),FA ADDED,Alec Burks)),\n",
-       " Activity((Team(Shanghai SHARKS),DROPPED,Derrick White)),\n",
-       " Activity((Team(NY Zhanos Diesel),DROPPED,Will Barton) (Team(NY Zhanos Diesel),FA ADDED,Terrence Ross)),\n",
-       " Activity((Team(NY Zhanos Diesel),FA ADDED,Will Barton)),\n",
-       " Activity((Team(SEA MoNeYPro),DROPPED,Otto Porter Jr.) (Team(SEA MoNeYPro),WAIVER ADDED,Josh Jackson)),\n",
-       " Activity((Team(NY Zhanos Diesel),TRADED,DeMarcus Cousins) (Team(Team Beyond),TRADED,T.J. Warren)),\n",
-       " Activity((Team(PHI Lower Merion 33),FA ADDED,Darius Bazley)),\n",
-       " Activity((Team(Team Tao),FA ADDED,Rudy Gay) (Team(Team Tao),DROPPED,Bobby Portis)),\n",
-       " Activity((Team(PHI Lower Merion 33),DROPPED,Davis Bertans)),\n",
-       " Activity((Team(NY Zhanos Diesel),FA ADDED,Joe Harris) (Team(NY Zhanos Diesel),DROPPED,Cam Reddish))]"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "league.recent_activity()"
+    "table_output = [(\"Team Name\", \"Team Id\")]\n",
+    "[table_output.append((team.team_name, team.team_id)) for team in league.teams]\n",
+    "display(HTML(tabulate.tabulate(table_output, tablefmt='html')))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from activity.myUtil import get_opponent_team, get_my_team"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opponent_roster = get_opponent_team(schedule[1], MY_TEAM_ID).roster"
+    "Put your **team id** into the variable below:"
    ]
   },
   {
@@ -132,36 +85,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from espn_api.basketball.week import Week\n",
-    "from espn_api.basketball.roster_week_predictor import RosterWeekPredictor"
+    "MY_TEAM_ID = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n",
-      "https://fantasy.espn.com/apis/v3/games/fba/seasons/2021\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "<tr><td>Week Id</td><td>Opponent Team Name </td></tr>\n",
+       "<tr><td>1      </td><td>Tim Liang          </td></tr>\n",
+       "<tr><td>2      </td><td>Dragon City Tiedan </td></tr>\n",
+       "<tr><td>3      </td><td>Team Beyond        </td></tr>\n",
+       "<tr><td>4      </td><td>PHI Lower Merion 33</td></tr>\n",
+       "<tr><td>5      </td><td>Team Tao           </td></tr>\n",
+       "<tr><td>6      </td><td>CZ ButtKicker      </td></tr>\n",
+       "<tr><td>7      </td><td>NY Zhanos Diesel   </td></tr>\n",
+       "<tr><td>8      </td><td>Badwomen ``        </td></tr>\n",
+       "<tr><td>9      </td><td>Team Tao           </td></tr>\n",
+       "<tr><td>10     </td><td>Tim Liang          </td></tr>\n",
+       "<tr><td>11     </td><td>Shanghai SHARKS    </td></tr>\n",
+       "<tr><td>12     </td><td>Team Beyond        </td></tr>\n",
+       "<tr><td>13     </td><td>PHI Lower Merion 33</td></tr>\n",
+       "<tr><td>14     </td><td>Dragon City Tiedan </td></tr>\n",
+       "<tr><td>15     </td><td>CZ ButtKicker      </td></tr>\n",
+       "<tr><td>16     </td><td>NY Zhanos Diesel   </td></tr>\n",
+       "<tr><td>17     </td><td>Badwomen ``        </td></tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "currWeek = Week(league, 3)"
+    "schedule = league.get_team_data(MY_TEAM_ID).schedule\n",
+    "table_output = [(\"Week Id\", \"Opponent Team Name\")]\n",
+    "[table_output.append((week_id + 1, get_opponent_team(matchup, MY_TEAM_ID).team_name)) for week_id, matchup in enumerate(schedule)]\n",
+    "display(HTML(tabulate.tabulate(table_output, tablefmt='html')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WEEK_ID = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "currWeek = Week(league, WEEK_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -241,8 +234,6 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML, display\n",
-    "import tabulate\n",
     "table_output.insert(0, (\"Team Name\", \"# of games\", \"Low\", \"High\", \"Avg\"))\n",
     "display(HTML(tabulate.tabulate(table_output, tablefmt='html')))"
    ]
