Line up editor V1, multiple issues

--- a/match_up_estimate.ipynb
+++ b/match_up_estimate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -287,64 +287,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PG', 'G', 'G/F', 'UT', 'BE', 'IR']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "league.get_team_data(MY_TEAM_ID).roster[0].eligibleSlots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from espn_api.basketball.line_up_editer import LineUpEditor\n",
+    "\n",
+    "editor = LineUpEditor(league, MY_TEAM_ID)\n",
+    "# editor.bench_all_players(MY_TEAM_ID, 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4277905, 0),\n",
+       " (3149673, 3),\n",
+       " (6477, 4),\n",
+       " (2527963, 1),\n",
+       " (4397136, 2),\n",
+       " (4065648, 11),\n",
+       " (4251, 11),\n",
+       " (4432816, 11),\n",
+       " (3064290, 11),\n",
+       " (4066636, 11)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "editor.get_optimized_line_up(league.get_team_data(MY_TEAM_ID).roster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moving player Trae Young\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4277905, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Jayson Tatum\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4065648, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Paul George\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4251, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Pascal Siakam\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 3149673, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Jonas Valanciunas\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 6477, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Victor Oladipo\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 2527963, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player LaMelo Ball\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4432816, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Aaron Gordon\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 3064290, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Markelle Fultz\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4066636, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Wendell Carter Jr.\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4277847, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Zach LaVine\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 3064440, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Collin Sexton\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 4277811, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Blake Griffin\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 3989, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n",
-      "moving player Mike Muscala\n",
-      "{'isLeagueManager': 'false', 'teamId': 2, 'type': 'FUTURE_ROSTER', 'memberId': '{3C4A75B6-F84B-48AE-8A75-B6F84B48AE47}', 'scoringPeriodId': 14, 'executionType': 'EXECUTE', 'items': [{'playerId': 2490089, 'type': 'LINEUP', 'fromLineupSlotId': 0, 'toLineupSlotId': 12}]}\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Unknown 409 Error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-0f1c3f43f89d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0meditor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLineUpEditor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleague\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0meditor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbench_all_players\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMY_TEAM_ID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m14\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/mnt/c/Users/MoNeY_Pro/PycharmProjects/espn-api/espn_api/basketball/line_up_editer.py\u001b[0m in \u001b[0;36mbench_all_players\u001b[0;34m(self, team_id, scoring_period)\u001b[0m\n\u001b[1;32m     29\u001b[0m                    \"items\": move_to_bench_command}\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchange_line_up\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/mnt/c/Users/MoNeY_Pro/PycharmProjects/espn-api/espn_api/basketball/line_up_editer.py\u001b[0m in \u001b[0;36mchange_line_up\u001b[0;34m(self, payload)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mchange_line_up\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleague\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mespn_request\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleague_post\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"/transactions/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/c/Users/MoNeY_Pro/PycharmProjects/espn-api/espn_api/requests/espn_requests.py\u001b[0m in \u001b[0;36mleague_post\u001b[0;34m(self, payload, headers, extend)\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0mendpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLEAGUE_ENDPOINT\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mextend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcookies\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcookies\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m         \u001b[0mcheckRequestStatus\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_request\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendpoint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mendpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/c/Users/MoNeY_Pro/PycharmProjects/espn-api/espn_api/requests/espn_requests.py\u001b[0m in \u001b[0;36mcheckRequestStatus\u001b[0;34m(status)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mstatus\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unknown %s Error'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mEspnFantasyRequests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Unknown 409 Error"
+      "Failed to bench player  Player(Alec Burks)\n",
+      "Failed to bench player  Player(Saddiq Bey)\n"
      ]
     }
    ],
    "source": [
-    "from espn_api.basketball.line_up_editer import LineUpEditor\n",
-    "\n",
-    "editor = LineUpEditor(league)\n",
-    "editor.bench_all_players(MY_TEAM_ID, 14)"
+    "editor.fill_line_up(19)"
    ]
   },
   {
