--- a/match_up_estimate.ipynb
+++ b/match_up_estimate.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -212,16 +212,16 @@
        "<table>\n",
        "<tbody>\n",
        "<tr><td>Team Name          </td><td># of games</td><td>Low               </td><td>High              </td><td>Avg               </td></tr>\n",
-       "<tr><td>Badwomen ``        </td><td>45        </td><td>1509.057142857143 </td><td>1650.5119047619048</td><td>1579.7845238095238</td></tr>\n",
-       "<tr><td>Shanghai SHARKS    </td><td>45        </td><td>1495.4642857142856</td><td>1626.1833333333334</td><td>1560.8238095238094</td></tr>\n",
-       "<tr><td>SEA MoNeYPro       </td><td>42        </td><td>1332.3809523809523</td><td>1526.5666666666668</td><td>1429.4738095238095</td></tr>\n",
-       "<tr><td>PHI Lower Merion 33</td><td>37        </td><td>1323.1214285714286</td><td>1441.1642857142856</td><td>1382.142857142857 </td></tr>\n",
-       "<tr><td>NY Zhanos Diesel   </td><td>41        </td><td>1231.5547619047618</td><td>1384.807142857143 </td><td>1308.1809523809525</td></tr>\n",
-       "<tr><td>Dragon City Tiedan </td><td>43        </td><td>1184.595238095238 </td><td>1423.2238095238095</td><td>1303.9095238095238</td></tr>\n",
-       "<tr><td>Team Tao           </td><td>41        </td><td>1215.25           </td><td>1325.4785714285713</td><td>1270.3642857142856</td></tr>\n",
-       "<tr><td>CZ ButtKicker      </td><td>42        </td><td>1174.9333333333334</td><td>1329.9            </td><td>1252.4166666666667</td></tr>\n",
-       "<tr><td>Tim Liang          </td><td>37        </td><td>1129.55           </td><td>1305.8214285714284</td><td>1217.6857142857143</td></tr>\n",
-       "<tr><td>Team Beyond        </td><td>38        </td><td>1060.3809523809525</td><td>1158.3333333333335</td><td>1109.3571428571431</td></tr>\n",
+       "<tr><td>Shanghai SHARKS    </td><td>41        </td><td>1383.1045454545454</td><td>1569.4229437229437</td><td>1476.2637445887444</td></tr>\n",
+       "<tr><td>Team Tao           </td><td>42        </td><td>1343.5195887445889</td><td>1594.5616883116882</td><td>1469.0406385281385</td></tr>\n",
+       "<tr><td>SEA MoNeYPro       </td><td>42        </td><td>1288.8454545454547</td><td>1524.9333333333334</td><td>1406.889393939394 </td></tr>\n",
+       "<tr><td>Tim Liang          </td><td>42        </td><td>1231.3232323232323</td><td>1457.794155844156 </td><td>1344.5586940836943</td></tr>\n",
+       "<tr><td>NY Zhanos Diesel   </td><td>37        </td><td>1152.5963203463205</td><td>1314.8051948051948</td><td>1233.7007575757575</td></tr>\n",
+       "<tr><td>Team Beyond        </td><td>40        </td><td>1122.4525974025973</td><td>1319.7285714285715</td><td>1221.0905844155845</td></tr>\n",
+       "<tr><td>Badwomen ``        </td><td>35        </td><td>1129.2818181818182</td><td>1277.0343073593074</td><td>1203.1580627705628</td></tr>\n",
+       "<tr><td>Dragon City Tiedan </td><td>34        </td><td>925.9707792207793 </td><td>1144.780303030303 </td><td>1035.375541125541 </td></tr>\n",
+       "<tr><td>CZ ButtKicker      </td><td>36        </td><td>915.1944444444445 </td><td>1144.1704545454547</td><td>1029.6824494949497</td></tr>\n",
+       "<tr><td>PHI Lower Merion 33</td><td>32        </td><td>913.8787878787878 </td><td>1100.3280303030303</td><td>1007.103409090909 </td></tr>\n",
        "</tbody>\n",
        "</table>"
       ],
@@ -264,12 +264,12 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "<tr><td>Home Team          </td><td>Estimate Points   </td><td># of Games</td><td>Away Team       </td><td>Estimate Points   </td><td># of Games</td><td>+/-                </td></tr>\n",
-       "<tr><td>Team Tao           </td><td>1270.3642857142856</td><td>41        </td><td>Shanghai SHARKS </td><td>1560.8238095238094</td><td>45        </td><td>-290.4595238095237 </td></tr>\n",
-       "<tr><td>SEA MoNeYPro       </td><td>1429.4738095238095</td><td>42        </td><td>Team Beyond     </td><td>1109.3571428571431</td><td>38        </td><td>320.11666666666633 </td></tr>\n",
-       "<tr><td>Dragon City Tiedan </td><td>1303.9095238095238</td><td>43        </td><td>Badwomen ``     </td><td>1579.7845238095238</td><td>45        </td><td>-275.875           </td></tr>\n",
-       "<tr><td>PHI Lower Merion 33</td><td>1382.142857142857 </td><td>37        </td><td>Tim Liang       </td><td>1217.6857142857143</td><td>37        </td><td>164.4571428571428  </td></tr>\n",
-       "<tr><td>CZ ButtKicker      </td><td>1252.4166666666667</td><td>42        </td><td>NY Zhanos Diesel</td><td>1308.1809523809525</td><td>41        </td><td>-55.764285714285734</td></tr>\n",
+       "<tr><td>Home Team          </td><td>Estimate Points   </td><td># of Games</td><td>Away Team         </td><td>Estimate Points   </td><td># of Games</td><td>+/-                </td></tr>\n",
+       "<tr><td>Team Beyond        </td><td>1221.0905844155845</td><td>40        </td><td>Badwomen ``       </td><td>1203.1580627705628</td><td>35        </td><td>17.93252164502178  </td></tr>\n",
+       "<tr><td>Tim Liang          </td><td>1344.5586940836943</td><td>42        </td><td>Team Tao          </td><td>1469.0406385281385</td><td>42        </td><td>-124.48194444444425</td></tr>\n",
+       "<tr><td>NY Zhanos Diesel   </td><td>1233.7007575757575</td><td>37        </td><td>Shanghai SHARKS   </td><td>1476.2637445887444</td><td>41        </td><td>-242.56298701298692</td></tr>\n",
+       "<tr><td>PHI Lower Merion 33</td><td>1007.103409090909 </td><td>32        </td><td>SEA MoNeYPro      </td><td>1406.889393939394 </td><td>42        </td><td>-399.785984848485  </td></tr>\n",
+       "<tr><td>CZ ButtKicker      </td><td>1029.6824494949497</td><td>36        </td><td>Dragon City Tiedan</td><td>1035.375541125541 </td><td>34        </td><td>-5.693091630591425 </td></tr>\n",
        "</tbody>\n",
        "</table>"
       ],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,15 +329,15 @@
        " (3149673, 3),\n",
        " (6477, 4),\n",
        " (2527963, 1),\n",
-       " (4397136, 2),\n",
-       " (4065648, 11),\n",
+       " (4065648, 2),\n",
        " (4251, 11),\n",
        " (4432816, 11),\n",
        " (3064290, 11),\n",
-       " (4066636, 11)]"
+       " (4277847, 11),\n",
+       " (3064440, 11)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,20 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to bench player  Player(Alec Burks)\n",
-      "Failed to bench player  Player(Saddiq Bey)\n"
+      "Failed to bench player  Player(Jayson Tatum)\n",
+      "Failed to change line up for player  4065648\n"
      ]
     }
    ],
    "source": [
-    "editor.fill_line_up(19)"
+    "editor.fill_line_up(25)"
    ]
   },
   {
