Add function to get the roster of the specific day; add code to avoid moving IR players; speed up line up movement by batching the move command

--- a/match_up_estimate.ipynb
+++ b/match_up_estimate.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,16 +212,16 @@
        "<table>\n",
        "<tbody>\n",
        "<tr><td>Team Name          </td><td># of games</td><td>Low               </td><td>High              </td><td>Avg               </td></tr>\n",
-       "<tr><td>Shanghai SHARKS    </td><td>41        </td><td>1383.1045454545454</td><td>1569.4229437229437</td><td>1476.2637445887444</td></tr>\n",
-       "<tr><td>Team Tao           </td><td>42        </td><td>1343.5195887445889</td><td>1594.5616883116882</td><td>1469.0406385281385</td></tr>\n",
-       "<tr><td>SEA MoNeYPro       </td><td>42        </td><td>1288.8454545454547</td><td>1524.9333333333334</td><td>1406.889393939394 </td></tr>\n",
-       "<tr><td>Tim Liang          </td><td>42        </td><td>1231.3232323232323</td><td>1457.794155844156 </td><td>1344.5586940836943</td></tr>\n",
-       "<tr><td>NY Zhanos Diesel   </td><td>37        </td><td>1152.5963203463205</td><td>1314.8051948051948</td><td>1233.7007575757575</td></tr>\n",
-       "<tr><td>Team Beyond        </td><td>40        </td><td>1122.4525974025973</td><td>1319.7285714285715</td><td>1221.0905844155845</td></tr>\n",
-       "<tr><td>Badwomen ``        </td><td>35        </td><td>1129.2818181818182</td><td>1277.0343073593074</td><td>1203.1580627705628</td></tr>\n",
-       "<tr><td>Dragon City Tiedan </td><td>34        </td><td>925.9707792207793 </td><td>1144.780303030303 </td><td>1035.375541125541 </td></tr>\n",
-       "<tr><td>CZ ButtKicker      </td><td>36        </td><td>915.1944444444445 </td><td>1144.1704545454547</td><td>1029.6824494949497</td></tr>\n",
-       "<tr><td>PHI Lower Merion 33</td><td>32        </td><td>913.8787878787878 </td><td>1100.3280303030303</td><td>1007.103409090909 </td></tr>\n",
+       "<tr><td>Shanghai SHARKS    </td><td>44        </td><td>1339.166933066933 </td><td>1713.9523809523807</td><td>1526.5596570096568</td></tr>\n",
+       "<tr><td>CZ ButtKicker      </td><td>44        </td><td>1370.4705627705628</td><td>1673.6620879120878</td><td>1522.0663253413254</td></tr>\n",
+       "<tr><td>Dragon City Tiedan </td><td>44        </td><td>1291.6880952380952</td><td>1672.8609307359309</td><td>1482.2745129870132</td></tr>\n",
+       "<tr><td>PHI Lower Merion 33</td><td>42        </td><td>1256.642857142857 </td><td>1555.3203130203133</td><td>1405.9815850815853</td></tr>\n",
+       "<tr><td>Tim Liang          </td><td>42        </td><td>1302.8570512820513</td><td>1505.848901098901 </td><td>1404.352976190476 </td></tr>\n",
+       "<tr><td>NY Zhanos Diesel   </td><td>41        </td><td>1268.8269480519484</td><td>1539.5690476190475</td><td>1404.197997835498 </td></tr>\n",
+       "<tr><td>Badwomen ``        </td><td>38        </td><td>1186.5192307692305</td><td>1428.4556776556778</td><td>1307.4874542124542</td></tr>\n",
+       "<tr><td>Team Beyond        </td><td>40        </td><td>1139.819130869131 </td><td>1392.3397435897436</td><td>1266.0794372294372</td></tr>\n",
+       "<tr><td>SEA MoNeYPro       </td><td>36        </td><td>1064.906227106227 </td><td>1365.1347985347984</td><td>1215.0205128205127</td></tr>\n",
+       "<tr><td>Team Tao           </td><td>27        </td><td>811.4499999999999 </td><td>1022.9653679653679</td><td>917.2076839826839 </td></tr>\n",
        "</tbody>\n",
        "</table>"
       ],
@@ -264,12 +264,12 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "<tr><td>Home Team          </td><td>Estimate Points   </td><td># of Games</td><td>Away Team         </td><td>Estimate Points   </td><td># of Games</td><td>+/-                </td></tr>\n",
-       "<tr><td>Team Beyond        </td><td>1221.0905844155845</td><td>40        </td><td>Badwomen ``       </td><td>1203.1580627705628</td><td>35        </td><td>17.93252164502178  </td></tr>\n",
-       "<tr><td>Tim Liang          </td><td>1344.5586940836943</td><td>42        </td><td>Team Tao          </td><td>1469.0406385281385</td><td>42        </td><td>-124.48194444444425</td></tr>\n",
-       "<tr><td>NY Zhanos Diesel   </td><td>1233.7007575757575</td><td>37        </td><td>Shanghai SHARKS   </td><td>1476.2637445887444</td><td>41        </td><td>-242.56298701298692</td></tr>\n",
-       "<tr><td>PHI Lower Merion 33</td><td>1007.103409090909 </td><td>32        </td><td>SEA MoNeYPro      </td><td>1406.889393939394 </td><td>42        </td><td>-399.785984848485  </td></tr>\n",
-       "<tr><td>CZ ButtKicker      </td><td>1029.6824494949497</td><td>36        </td><td>Dragon City Tiedan</td><td>1035.375541125541 </td><td>34        </td><td>-5.693091630591425 </td></tr>\n",
+       "<tr><td>Home Team      </td><td>Estimate Points   </td><td># of Games</td><td>Away Team          </td><td>Estimate Points   </td><td># of Games</td><td>+/-                </td></tr>\n",
+       "<tr><td>Tim Liang      </td><td>1404.352976190476 </td><td>42        </td><td>NY Zhanos Diesel   </td><td>1404.197997835498 </td><td>41        </td><td>0.1549783549780841 </td></tr>\n",
+       "<tr><td>Team Beyond    </td><td>1266.0794372294372</td><td>40        </td><td>PHI Lower Merion 33</td><td>1405.9815850815853</td><td>42        </td><td>-139.90214785214812</td></tr>\n",
+       "<tr><td>Badwomen ``    </td><td>1307.4874542124542</td><td>38        </td><td>CZ ButtKicker      </td><td>1522.0663253413254</td><td>44        </td><td>-214.57887112887124</td></tr>\n",
+       "<tr><td>Team Tao       </td><td>917.2076839826839 </td><td>27        </td><td>SEA MoNeYPro       </td><td>1215.0205128205127</td><td>36        </td><td>-297.8128288378289 </td></tr>\n",
+       "<tr><td>Shanghai SHARKS</td><td>1526.5596570096568</td><td>44        </td><td>Dragon City Tiedan </td><td>1482.2745129870132</td><td>44        </td><td>44.285144022643635 </td></tr>\n",
        "</tbody>\n",
        "</table>"
       ],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,49 +319,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4277905, 0),\n",
-       " (3149673, 3),\n",
-       " (6477, 4),\n",
-       " (2527963, 1),\n",
-       " (4065648, 2),\n",
-       " (4251, 11),\n",
-       " (4432816, 11),\n",
-       " (3064290, 11),\n",
-       " (4277847, 11),\n",
-       " (3064440, 11)]"
+       "[Player(Trae Young),\n",
+       " Player(Paul George),\n",
+       " Player(Pascal Siakam),\n",
+       " Player(Jonas Valanciunas),\n",
+       " Player(Victor Oladipo),\n",
+       " Player(LaMelo Ball),\n",
+       " Player(Aaron Gordon),\n",
+       " Player(Wendell Carter Jr.),\n",
+       " Player(Zach LaVine),\n",
+       " Player(Collin Sexton),\n",
+       " Player(Blake Griffin),\n",
+       " Player(Joe Harris),\n",
+       " Player(Danny Green),\n",
+       " Player(Luguentz Dort)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "editor.get_optimized_line_up(league.get_team_data(MY_TEAM_ID).roster)"
+    "editor.game_day_player_getter.get_active_player_list_for_day(30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "editor.bench_all_players(33)\n",
+    "editor.fill_line_up(33, ignore_injury=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_up = league.espn_request.get_line_up_for_day(2, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-5cd38c5ac291>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'playerId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mentry\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline_up\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'teams'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'roster'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-21-5cd38c5ac291>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'playerId'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mentry\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline_up\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'teams'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'roster'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "[print(entry['playerId'], entry['name']) for entry in line_up['teams'][0]['roster']['entries']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to bench player  Player(Jayson Tatum)\n",
-      "Failed to change line up for player  4065648\n"
+      "4277905 Trae Young\n",
+      "4065648 Jayson Tatum\n",
+      "4251 Paul George\n",
+      "3149673 Pascal Siakam\n",
+      "6477 Jonas Valanciunas\n",
+      "2527963 Victor Oladipo\n",
+      "4432816 LaMelo Ball\n",
+      "3064290 Aaron Gordon\n",
+      "4277847 Wendell Carter Jr.\n",
+      "3064440 Zach LaVine\n",
+      "4277811 Collin Sexton\n",
+      "3989 Blake Griffin\n",
+      "2528794 Joe Harris\n",
+      "3988 Danny Green\n",
+      "4397020 Luguentz Dort\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "editor.fill_line_up(25)"
+    "from espn_api.basketball.player import Player\n",
+    "players = [(Player(entry)) for entry in line_up['teams'][0]['roster']['entries']]\n",
+    "[print(player.playerId, player.name) for player in league.get_team_data(MY_TEAM_ID).roster]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Player(line_up['teams'][0]['roster']['entries'][1]).lineUpSlotId"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "league.teams[2].roster[0].lineUpSlotId"
    ]
   },
   {
